# ALMS-protocol

./: CONTRIBUTING.md  README.md  pyproject.toml
alms-arxiv/: README.md  alms.aux  alms.blg  alms.tex  refs.bib
benchmarks/shapenet_audio/: README.md
examples/: README.md  quickstart.py
ietf/: draft-ant-alms-geodesic-attention-00.md
rfc_draft/: rfc-draft-00.md
src/alms/: __init__.py  core.py
tests/: test_alms.py
