[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alms-protocol"
version = "0.1.0"
description = "Geometric Reasoning Layer for AGI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Primaginea", email = "author@alms-protocol.org"},
]
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.4.0",
    "faiss-gpu",
    "numpy>=1.24.0",
    "networkx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/AntonL1169/alms-protocol"
Repository = "https://github.com/AntonL1169/alms-protocol"
Issues = "https://github.com/AntonL1169/alms-protocol/issues"

[tool.setuptools.packages.find]
where = ["src"]
